--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-promise-router": "^4.1.0",
     "mongoose": "^5.13.4"
   },
   "devDependencies": {
